--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,7 +57,7 @@ p {
 
 .logo a {
   text-decoration: none;
-  color: var(--font-body);
+  color: var(--dark-grey);
 }
 
 .hero {
@@ -125,6 +125,8 @@ button {
 
 .cart svg {
   width: 25px;
+  display: inline-block;
+  transition: fill 0.3s ease;
 }
 
 .cart:hover svg {
@@ -307,6 +309,32 @@ button {
   margin: 0 30px;
 }
 
+@keyframes shake {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  25% {
+    transform: rotate(10deg);
+  }
+
+  50% {
+    transform: rotate(-10deg);
+  }
+
+  75% {
+    transform: rotate(10deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.animate-cart {
+  animation: shake 0.5s ease-in-out;
+}
+
 @keyframes pulse {
   0% {
     transform: scale(1);
@@ -374,7 +402,7 @@ footer {
 .order-summary h2 {
   margin-bottom: 1.5rem;
   padding-bottom: 0.5rem;
-  border-bottom: 2px solid #007bff;
+  border-bottom: 2px solid var(--secondary-color);
 }
 
 .summary-items {
@@ -441,7 +469,7 @@ footer {
 .checkout-form h2 {
   margin-bottom: 1.5rem;
   padding-bottom: 0.5rem;
-  border-bottom: 2px solid #007bff;
+  border-bottom: 2px solid var(--secondary-color);
 }
 
 fieldset {
@@ -536,12 +564,12 @@ input:valid {
 }
 
 .btn-primary {
-  background-color: #007bff;
+  background-color: var(--secondary-color);
   color: white;
 }
 
 .btn-primary:hover {
-  background-color: #0056b3;
+  background-color: var(--tertiary-color);
 }
 
 .btn-secondary {
